--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,66 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   font-size: 15px;
   background-color: white;
   color: #181b2a;
-  font-family: Ubuntu,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Ubuntu, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.padding{
+.padding {
   padding: 5% 8%;
 }
 
-.global-heading1{
+.global-heading1 {
   font-family: Ubuntu-Bold;
   font-size: 33px;
   color: #222222;
 }
 
-.global-heading1 span{
+.global-heading1 span {
   font-family: Ubuntu-Bold;
   font-size: 33px;
   color: red;
 }
 
-.global-heading2{
+.global-heading2 {
   font-family: Ubuntu-Bold;
   font-size: 23px;
   color: #222222;
   color: red;
 }
 
-.global-text1{
+.global-text1 {
   font-size: 15px;
-  line-height:23px;
+  line-height: 23px;
 }
 
-.text-center{
+.hero-heading {
+  font-family: Ubuntu-Bold;
+  font-size: 60px;
+  color: white;
+  text-align: center;
+}
+
+.hero-text {
+  font-size: 20px;
+  color: white;
+  padding: 0px 15%;
+  text-align: center;
+  line-height: 30px;
+}
+
+.text-center {
   display: flex;
   justify-content: center;
   text-align: center;
 }
 
-.hr{
+.hr {
   width: 60px;
   height: 3px;
   background-color: red;
@@ -53,52 +68,52 @@ body{
 }
 
 
-.mt-5per{
+.mt-5per {
   margin-top: 5%;
 }
 
-.mt-8per{
+.mt-8per {
   margin-top: 8%;
 }
 
-.mb-5per{
+.mb-5per {
   margin-bottom: 5%;
 }
 
-.mt-10{
+.mt-10 {
   margin-top: 10px;
 }
 
-.mt-20{
+.mt-20 {
   margin-top: 20px;
 }
 
-.mt-30{
+.mt-30 {
   margin-top: 30px;
 }
 
-.mt-40{
+.mt-40 {
   margin-top: 40px;
 }
 
-.mt-50{
+.mt-50 {
   margin-top: 50px;
 }
 
 
 
-.mt-80{
+.mt-80 {
   margin-top: 80px;
 }
 
 /* border radius  */
 
-.br-10{
+.br-10 {
   border-radius: 10px;
 }
 
 /* flex  */
-.flex-start{
+.flex-start {
   display: flex;
   justify-content: flex-start;
 }
