--- a/src/App.css
+++ b/src/App.css
@@ -119,3 +119,9 @@ body {
   display: flex;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 900px) {
+  .padding{
+    padding: 15% 7%;
+  }
+}
