--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -31,16 +31,16 @@
 }
 
 .nb-bottom img{
-    height: 90px;
+    height: 100%;
 }
 
-.nb-bottom div{
+.nb-linksBox{
     display: flex;
     align-items: center;
     gap: 30px;
 }
 
-.nb-bottom div ul{
+.nb-ul{
     display: flex;
     align-items: center;
     gap: 30px;
@@ -48,11 +48,60 @@
     font-size: 15px;
 }
 
-.nb-bottom div ul li{
+.nb-ul li{
     cursor: pointer;
     font-family: Poppins-Bold;
 }
 
-.nb-bottom div ul li.active{
+.nb-ul li.active{
     color: red;
+}
+
+.menu-icon{
+    display: none;
+}
+
+@media screen and (max-width: 900px) {
+    .nb-top{
+        display: none;
+    }
+
+    .nb-bottom{
+        height: 70px;
+    }
+
+    .menu-icon{
+        display: block;
+
+    }
+
+    .nb-linksBox{
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        position: fixed;
+        z-index: 88;
+        top: 70px;
+        left: -100%;
+        width: 100%;
+        min-height: 300px;
+        background-color: white;
+        border: 1px solid lightgray;
+        transition: 1s ease;
+        padding: 30px;
+        /* padding-left: 30px; */
+        /* padding-bottom: 100px; */
+    }
+
+    .show-menu{
+        left: 0px;
+    }
+
+
+    .nb-ul{
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
 }
