--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,8 @@ body {
   line-height: 23px;
 }
 
-.hero-heading {
+.hero-heading,
+.hero-heading1 {
   font-family: Ubuntu-Bold;
   font-size: 60px;
   color: white;
@@ -124,4 +125,12 @@ body {
   .padding{
     padding: 15% 7%;
   }
+
+  .hero-heading1 {
+  font-family: Ubuntu-Bold;
+  font-size: 40px;
+  line-height: 60px;
+  color: white;
+  text-align: center;
+}
 }
