--- a/src/pages/services/Services.css
+++ b/src/pages/services/Services.css
@@ -1,5 +1,12 @@
 .flex-row{
     display: flex;
     align-items: center;
-    gap: 40px;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+
+.h-sec4-list-item1{
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
